# stl2ngc

./: CMakeLists.txt  README.md  stl2ngc.cpp  stl2ngc.vcxproj
